# poe_rl

./: .gitignore  CRAFTING_RULES.md  README.md  Readme.md  pyproject.toml
.github/: copilot-instructions.md
configs/: eval_dual_res.json
docs/: ARCHITECTURE.md  DATA_MODEL.md  RL_JOURNEY.md
src/poe_rl/: __init__.py  main.py
src/poe_rl/debug/: __init__.py  cli.py  explorer.py
src/poe_rl/engine/: actions.py  core.py  database.py  price.py
src/poe_rl/rl/: eval_saved_policy.py  train_ppo.py
src/poe_rl/rl/agents/: q_learning.py
src/poe_rl/rl/envs/: ring_crafting.py  ring_crafting_env.py
src/poe_rl/ui/: app.py
tests/: test_actions_functional.py  test_fracturing.py  test_omens_failure.py
